Description
When entering the desktop the Hebrew letter render as squares.
Managed to solve by copying the installed windows Tahoma font files.
The ReactOS Tahoma font lacks hebrew glyphs.
Attachments
Issue Links
- is blocked by
-
CORE-15079 Regression - MS .NET4 installer - text in URL is too much apart from the underscores
-
- Resolved
-
- is duplicated by
-
CORE-14943 [FONTS] Add Hebrew vector glyphs to Tahoma font
-
- Resolved
-